samples/_failures_safe/1761557529_bfc0ba_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_29240c92.c: In function ‘main’:
./samples/SAFE/__tmp_29240c92.c:118:16: error: missing terminating " character
  118 |         printf("Invalid bounding box:
      |                ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_29240c92.c:118:9: error: expected expression at end of input
  118 |         printf("Invalid bounding box:
      |         ^~~~~~
./samples/SAFE/__tmp_29240c92.c:118:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_29240c92.c:118:9: error: expected declaration or statement at end of input
